fixed loading on mobile

--- a/src/app/components/loading/loading.style.css
+++ b/src/app/components/loading/loading.style.css
@@ -103,3 +103,8 @@
   }
 }
  
+@media (max-width: 428px) {
+  .content {
+    font-size: 2.25rem;
+  }
+}
